debian/traefik/templates/IngressRoute/Custom/IngressRouteSSH.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: <name>
  namespace: <namesapce>
spec:
  entryPoints:
    - <entrypoint-defined-in-traefik-values> # Usually it's 22 or 2222
  routes:
    - match: HostSNI(`*`) # Mandatory for ssh
      services:
        - name: <service-name>
          port: <service-port>
